--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "yii2-extension",
 	"keywords": ["yii2","extension","file manager"],
     "require": {
-        "yiisoft/yii2": "~2.0.0"
+        "yiisoft/yii2": "~2.0.0",
+		"imagine/imagine": "v1.2.4"
     },
     "license": "MIT",
     "authors": [
